Fixed Portfolio Page white space and Size of Green Background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 /*General Stylings*/
+* {
+  box-sizing: border-box;
+}
+
 body {
   position: relative;
   top: 0;
@@ -6,7 +10,9 @@ body {
   color: #777777;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background-color: #777777;
-  max-width: 100%;;
+  max-width: 100%;
+  line-height: 1.5;
+  font-size: 16px;
 }
 
 /*Header and Nav-Bar*/
@@ -21,10 +27,11 @@ header {
 }
 
 .bigName {
+  position: relative;
   background-color: #4aaaa5;
   color: #ffffff;
   float: left;
-  height: 2em;
+  height: 102%;
   margin: 0 0 0 6em;
   padding: 0.6em 0.8em 0.1em 0.79em;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -45,31 +52,30 @@ header {
 /* About Me Section */
 .main-body {
   background-color: #ffffff;
-  max-width: 80%;
-  margin: 2em 12em 2em 12em;
+  max-width: 100%;
+  height: 100%;
+  margin: 2em 12em 6rem 12em;
+  overflow: auto;
 }
 
 section.aboutMe {
   padding-bottom: 1em;
-  height: 1000px;
 }
 
 h1.bigNameInvert {
   color: #4aaaa5;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  margin: 2em 1em 1em 0.6em;
+  margin: 0em 1em 1em 0.6em;
   padding-top: 1em;
   font-size: 2em;
 }
 
 h1.bigNameInvert#uniqueInvert {
   height: 100%;
-  overflow: auto;
-  
 }
 
 hr {
-  width: 97.3%;
+  width: 96.5%;
   color: #cccccc;
   border-style: solid;
 }
@@ -90,10 +96,9 @@ p#indentMe {
   margin-right
 }
 
-
-
 /* Footer Section */
 #greenStrip {
+  /* bottom: 20px; */
   background-color: #4aaaa5;
   height: 0.5em;
 }
@@ -121,10 +126,10 @@ p#indentMe {
 
 footer {
   position: fixed;
-  bottom: 0;
+  bottom: 0;;
   background-color: #666666;
   margin: 0 auto;
-  height: 55px;
+  height: 50px;
   width: 100%;
 }
 
